@@ -53,6 +53,9 @@
 	* Optimize TSIG digest function name comparison (Thanks Marc Buijsman)
 	* Compare names case insensitive with ldns_pkt_rr_list_by_name and
 	  ldns_pkt_rr_list_by_name_and_type (thanks Johannes Naab)
+	* Replace --enable-draft-rrtypes with a seperate --enable for each
+	  draft RR type: --enable-rrtype-ninfo, --enable-rrtype-rkey,
+	  --enable-rrtype-cds, --enable-rrtype-uri and --enable-rrtype-ta
 
 1.6.16	2012-11-13
 	* Fix Makefile to build pyldns with BSD make
